@@ -2,6 +2,8 @@ Post-v20.06.0
 --------------------------
    - Added packet marking support for traffic routed with
      a routing policy.
+   - Added DHCPINFORM and DHCPRELEASE support in native
+     OVN DHCPv4 responder.
 
 OVN v20.06.0
 --------------------------
